--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@ body {
   /* background-color: #202020; */
 }
 
+.text-cinzel {
+  font-family: 'Cinzel', serif;
+}
+
 .bg-yellow {
   background-color: #D8C879;
 }
@@ -25,6 +29,10 @@ body {
 .text-yellow {
   color: #D8C879;
 
+}
+
+.text-grey {
+  color: #404041;
 }
 
 
